<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="#f9f9f9"
    android:orientation="vertical"
    tools:context=".Login"
    android:padding="20dp">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="167dp"
        android:layout_height="99dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:src="@drawable/clogo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/profile_img"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"


            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:padding="5dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_bg"
            android:elevation="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="342dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_marginTop="-15dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_bg"
            android:elevation="7dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sign_in"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:clickable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="#000000"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

        </com.google.android.gms.common.SignInButton>


    </LinearLayout>


</LinearLayout>